--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities; 
 
+*{
+    font-family: outfit;
+}
+
 .active hr{
     @apply block
+}
+
+::-webkit-scrollbar {
+    @apply hidden
+}
+
+@layer base {
+  :root {
+        --radius: 0.5rem;
+    }
 }
